courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error24.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_WHILE {body=ST_BLOCK {stmts=[]},guard=EXP_NUM 3}]} : program
;
